--- a/templates/byp_b2b_onboarding_subscription/index.ejs
+++ b/templates/byp_b2b_onboarding_subscription/index.ejs
@@ -17,8 +17,8 @@
         }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, {            
-        bannerTitle:'Enhancing the Business Booking Experience',
-        bannerSubTitle:'For pet business owners booking appointments for their customers',
+        bannerTitle:'SaaS Onboarding & Subscription Optimization',
+        bannerSubTitle:'Streamline onboarding process and driving subscription growth',
         bannerLogoUrl:`logo_BYP.svg`,
         SlideDeckUrl:`https://www.figma.com/proto/g0r9aZkxovW1vD5oJ4jvDZ/Enhancing-the-B2B-Selling-%26-Booking-Experience?page-id=2001%3A38623&node-id=2001-39176&viewport=4032%2C1924%2C0.09&t=sBVSsXxg9STW6os4-1&scaling=contain&content-scaling=fixed&starting-point-node-id=2001%3A39176`,
         bannerBgColor:``, 
@@ -36,7 +36,7 @@
       <div class="Grid-cell">
         <div class="element">
           <h3> <strong class=""> Timeline </strong> </h3>
-          <h4> June - July 2023 </h4>
+          <h4> January 2024 </h4>
           <h4> 4 Weeks </h4>
         </div>
       </div>
@@ -50,9 +50,11 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <h3> <strong class=""> Role </strong> </h3>
+          <h3> <strong class=""> Tasks </strong> </h3>
           <h4> User Research </h4>
-          <h4> Design, test & Iterate </h4>
+          <h4> Design, Test & Iterate </h4>
+          <h4> Deliver, Q/A </h4>
+
         </div>
       </div>
       <div class="Grid-cell">
