--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -98,11 +98,12 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonCTA buttonLarge bgVWGrey">My resume
+        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">My resume
           </button></a>
+     
       </div>
       <div class="element">
-        <a href="#about"> <button class="buttonCTA buttonFlip bgVWGrey">About me
+        <a href="#about"> <button class="buttonLarge buttonFlip bgVWGrey">About me
           </button></a>
       </div>
     </div>
@@ -123,7 +124,7 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> SaaS Business Booking & Onboarding </h1>
+              <h1 class="specialTextL fontWeight100">  Business Scheduling, Onboarding, Subscription </h1>
             </div>
           </div>
         </div>
@@ -163,7 +164,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/byp_b2b_booking"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -182,21 +183,28 @@
 
           <div class="Grid-cell aside aside-1">
             <div class="element">
-              <h1 class="specialTextM fontWeight700">SaaS Subscription Success</h1>
+              <h1 class="specialTextM fontWeight700">Onboarding & Subscription
+              </h1>
 
-              <h3 class="colorLandingText fontWeight700">Enhancing the Consumer Booking Experience
+              <h3 class="colorLandingText fontWeight700">Streamline onboarding process and driving subscription growth
+
+
               </h3>
               <ul>
 
-                <li class="listCircle">Booking Conversion Rate: Improved by 169% (from 15% to 40%)
+                <li class="listCircle">Reduced Onboarding Time: 30% decrease in the average time required to complete onboarding.
+
+
                 </li>
 
                 <li class="listCircle">
-                  Reduced Time to Book: 48% Decrease (from 5 minutes to 2.6 minutes)
+                  Improved Decision-Making: 25% increase in user satisfaction with onboarding clarity and guidance.
                 </li>
                 <li class="listCircle">
-                  Booking Abandonment Rate: 67% Reduction (from 30% to 10%)
-
+                  Higher Completion Rates: 40% rise in onboarding completion rates.
+                </li>
+                <li class="listCircle">
+                  Boosted Subscription Conversions: 20% growth in conversion rates from trial to paid subscriptions.
                 </li>
 
 
@@ -204,7 +212,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/byp_b2b_subscription/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -261,7 +269,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/byp_b2b_booking"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -297,7 +305,7 @@
 
           <div class="Grid-cell aside aside-1">
             <div class="element">
-              <h1 class="specialTextM fontWeight700">The Transition from White-Glove to Self-Service</h1>
+              <h1 class="specialTextM fontWeight700">From White-Glove to Self-Service</h1>
 
               <h3 class="colorLandingText fontWeight700">Shifting from a white-glove service to a user-friendly self-service platform.
               </h3>
@@ -319,7 +327,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_SaaS/"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/byp_b2b_SaaS/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -334,7 +342,9 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Healthcare Consumer Facing Product Design </h1>
+              <h1 class="specialTextL fontWeight100"> Consumer-Facing Generic Medication Purchase Experience
+
+              </h1>
             </div>
           </div>
         </div>
@@ -362,18 +372,18 @@
               </h3>
               <ul>
 
-                <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+                <li class="listCircle">Highlighting the Economic Advantage of RX Zero
                 </li>
                 <li class="listCircle">
-                  Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
-
+                  Enhanced User Trust and Confidence
                 </li>
-
+                <li class="listCircle">
+                  Increased Subscription Adoption                </li>
               </ul>
 
             </div>
             <div class="element">
-              <a href="/savings_calculator/"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/savings_calculator/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -385,7 +395,7 @@
 
               <div class="paddingXL borderRadiusL gradient_background3">
                 <a href="/refining_rx_zero/">
-                  <img src="/projectImages/rx_zero.svg" alt="RX Zero"></a>
+                  <img src="/projectImages/rx_zero.png" alt="RX Zero"></a>
               </div>
             </div>
           </div>
@@ -415,7 +425,7 @@
 
             </div>
             <div class="element">
-              <a href="/refining_rx_zero/"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/refining_rx_zero/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -474,7 +484,7 @@
 
             </div>
             <div class="element">
-              <a href="/admin_panel/"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              <a href="/admin_panel/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
                 </button></a>
             </div>
           </div>
@@ -551,22 +561,23 @@
 
           <div class="Grid-cell aside aside-2">
             <div class="element">
-              <h1 class="specialTextM fontWeight700">Design System</h1>
+              <h1 class="specialTextM fontWeight700">Design System Creation & Optimization</h1>
 
               <h3 class="colorLandingText fontWeight700">Design & Implementation</h3>
               <ul>
 
-                <li class="listCircle">Organize component for this site
+                <li class="listCircle">Efficiently structured components for seamless site navigation. 
                 </li>
                 <li class="listCircle">
-                  Easy find, compare and reuse component
+                  Discover, compare, and reuse elements with ease, enhancing design consistency and workflow efficiency.
+
                 </li>
 
               </ul>
 
             </div>
             <div class="element">
-              <a href="/design_system/"> <button class="buttonCTA buttonLarge bgVWGrey">View Design System
+              <a href="/design_system/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Design System
                 </button></a>
             </div>
           </div>
@@ -664,7 +675,7 @@
           <div class="row centerVer">
             <div class="element">
 
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonCTA buttonLarge bgVWGrey">Email me
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLarge buttonPrimary bgVWGrey">Email me
                 </button></a>
 
             </div>
