--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -21,12 +21,12 @@
     }) %>
 
   <div class="wrapper">
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonCTA buttonFlip bgVWGrey">PDF Resume
+          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonLarge buttonFlip bgVWGrey">PDF Resume
             </button></a>
           <!--buttonBlack-->
 
@@ -39,7 +39,7 @@
 
     <div class="wrapper colorBgVW pattern2 shadowBox ">
       <div class="marginM">
-        <div class="blankHXS"></div>
+        <div class="blankHXXS"></div>
 
 
         <div class="Grid Grid--gutters Grid--full">
@@ -62,7 +62,7 @@
               <h6 class="textItalic"> August 2015 - May 2017</h6>
               <h6 class="textItalic"> August 2018 - May 2019</h6>
 
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <h5 class="fontWeight400 Grey700">Master of Architecture</h5>
 
@@ -74,7 +74,7 @@
             <div class="element">
               <h5> <strong>Beijing University of Technology </strong> </h5>
               <h6 class="textItalic"> September 2009 - July 2013</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <h5 class="fontWeight400 Grey700">Bachelor of Art</h5>
               <h6> Art &amp; Design &amp; Landscape Design </h6>
@@ -82,7 +82,7 @@
             <div class="element">
               <h5> <strong>Google UX Design Professional Certificate </strong> </h5>
               <h6 class="textItalic"> Online class, Completed August 2021</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <h6>Google UX certificate on Coursera</h6>
 
@@ -92,7 +92,7 @@
             <div class="element">
               <h5> <strong>Codecademy </strong> </h5>
               <h6 class="textItalic"> March - May 2023</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <h6>Learn User Research: Generative</h6>
               <h6>Learn Design Thinking: Ideation</h6>
@@ -182,32 +182,32 @@
               <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
               <h6 class="textItalic">Feb. 2024 - Present, Full-time</h6>
 
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Redesigned and streamlined key workflows in the B2B web platform, including onboarding, service creation, and settings, resulting in a 79% reduction in onboarding time and an 85% increase in task completion rate.</li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Developed and implemented upsell strategies with stakeholders during the business-facing booking process, including add-ons, packages, and membership options, resulting in an average increase of $52 per transaction, a 14% increase.
                 </li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Led the redesign of the B2C mobile booking experience, achieving a 169% increase in booking conversions and reducing booking time by 6 minutes on avarage.
                 </li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Adapted the B2B web platform to a minimal, efficient mobile version, ensuring key functionalities were maintained, contributing to a 35% increase in mobile app adoption.</li>
 
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Conducted comprehensive usability testing, user interviews, and competitive analysis, resulting in a 38% reduction in user errors and a 41% increase in user satisfaction scores.</li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Collaborated closely with stakeholders and cross-functional teams to align design initiatives with business goals, enhancing communication and project alignment.</li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Contributed to the development and refinement of the product roadmap using tools like Trello and Notion, leading to an improvement in project delivery times. </li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Established a robust design system and provided tailored guidance for individual deliverables, resulting in improved team productivity and faster development times.</li>
 
@@ -217,20 +217,20 @@
 
               <h5><strong>LASO Health | Product Designer </strong></h5>
               <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
 
               <ul>
                 <li class="listCircle">Designed an Admin Panel for user management, integrating advanced features based on UX research.</li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Developed a cost-benefit calculator to maximize customer savings and boost subscriptions.
                 </li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Revitalized the design system for mobile and web applications, enhancing user experience.
                 </li>
-                <div class="blankHXXS"></div>
+                <div class="blankHTiny"></div>
 
                 <li class="listCircle">Crafted responsive product pages and updated content based on user research.</li>
               </ul>
@@ -238,7 +238,7 @@
             <div class="element">
               <h5><strong>Modernized Mobile LLC | UX Designer </strong></h5>
               <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Designed a tablet-based admin panel for the 'Clean Spaces' app, replicating key features and functionality from the consumer mobile application.</li>
@@ -247,16 +247,16 @@
             <div class="element">
               <h5><strong>VW Studio | Freelancer </strong></h5>
               <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Designed and developed a portfolio website from scratch using HTML, CSS, JavaScript, and EJS, deployed on AWS. </li>
               </ul>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
               <ul>
               <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
               </ul>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
               <ul>
                 <li class="listCircle">Updated and maintained UI components and a responsive grid system for the site.</li>
               </ul>
@@ -269,7 +269,7 @@
             <div class="element">
               <h5><strong>Buro OS | Architectural Designer </strong></h5>
               <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Main tasks at Buro OS are modifying building massing, updating design packages, cooperating visualization teams, and producing 2d graphics and 3d digital models.
@@ -281,7 +281,7 @@
             <div class="element">
               <h5><strong>In Design Studio | Summer Intern </strong></h5>
               <h6 class="textItalic">May. 2017 - Aug.2017</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Conducted zoning code research
@@ -295,7 +295,7 @@
             <div class="element">
               <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
               <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
               <ul>
                 <li class="listCircle">Produced digital model and renderings.
@@ -308,7 +308,7 @@
             <div class="element">
               <h5><strong>Do Union | Designer </strong></h5>
               <h6 class="textItalic">Jul. 2010 - May.2012</h6>
-              <div class="blankHXXS"></div>
+              <div class="blankHTiny"></div>
 
 
 
