--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -36,8 +36,10 @@
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+      <div class="blankHTiny"></div>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonLarge <%= bannerButtonColor %>">Slide Deck</button></a>
+
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Slide Deck</button></a>
     </div>
 
   </div>
@@ -50,8 +52,9 @@
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+      <div class="blankHTiny"></div>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonLarge  <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary  <%= bannerButtonColor %>">Slide Deck</button></a>
 
       <div class="blankHXS"></div>
     </div>
@@ -65,8 +68,10 @@
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+      <div class="blankHTiny"></div>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonLarge <%= bannerButtonColor %>">Slide Deck</button></a>
+
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Slide Deck</button></a>
 
       <div class="blankHXS"></div>
     </div>
