--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -52,7 +52,7 @@
         <div class="element">
           <h3> <strong class=""> Role </strong> </h3>
           <h4> User Research </h4>
-          <h4> Design, test & Iterate </h4>
+          <h4> Design, Test & Iterate </h4>
         </div>
       </div>
       <div class="Grid-cell">
@@ -808,7 +808,8 @@
                 </div>
               </div>
             </div>
-          </div>          <div class="blankHXS"></div>
+          </div>
+          <div class="blankHXS"></div>
 
         </div>
         <div class="blankHS"></div>
@@ -855,7 +856,6 @@
 
 
 
-
                   </h3>
 
 
@@ -879,6 +879,8 @@
           </div>
         </div>
         <div class="colorBgBYPblue200">
+          <div class="blankHXS"></div>
+
           <div class="wrapper">
             <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
@@ -904,7 +906,6 @@
 
 
 
-
                           </h3>
 
                         </div>
@@ -915,11 +916,15 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
         </div>
         <div class="blankHS"></div>
         <hr class="wrapper">
         <div class="blankHS"></div>
         <div class="colorBgBYPblue200">
+          <div class="blankHXS"></div>
+
           <div class="wrapper">
             <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
@@ -950,7 +955,8 @@
                 <h3>Clicking the calendar automatically selects the appointment date and time based on user's selection.</h3>
               </div>
             </div>
-          </div>
+          </div>          <div class="blankHXS"></div>
+
           <div class="blankHS"></div>
 
         </div>
@@ -958,6 +964,8 @@
         <hr class="wrapper">
         <div class="blankHS"></div>
         <div class="colorBgBYPblue200">
+          <div class="blankHXS"></div>
+
           <div class="wrapper">
             <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
@@ -989,7 +997,8 @@
                 </h3>
               </div>
             </div>
-          </div>
+          </div>          <div class="blankHXS"></div>
+
           <div class="blankHS"></div>
 
         </div>
@@ -999,6 +1008,8 @@
 
 
         <div class="colorBgBYPblue200">
+          <div class="blankHXS"></div>
+
           <div class="wrapper">
             <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
@@ -1096,7 +1107,7 @@
             <div class="Grid Grid--full Grid--gutters">
               <div class="Grid-cell">
                 <div class="element">
-                  <h3 class="specialTextL fontWeight700 ">#2 Hide order details by default to avoid confusion                  </h3>
+                  <h3 class="specialTextL fontWeight700 ">#2 Hide order details by default to avoid confusion </h3>
 
                 </div>
               </div>
@@ -1133,7 +1144,7 @@
               fontColor:'colorBYPblue800',
               fontSize:'h1', 
               fontWeight:'fontWeight900',       
-              titleText:'Reflection',
+              titleText:'Outcome',
               }) %>
           </div>
           <div class="Grid Grid--full Grid--gutters">
@@ -1144,61 +1155,78 @@
 
                 <ul>
                   <li class="listCircle">
+                    <h4>Streamlined the Booking Process </h4>
+                  </li>
+                  <li class="listCircle">
                     <h4>Reduce booking time</h4>
                   </li>
                   <li class="listCircle">
                     <h4>Improve booking efficiency</h4>
                   </li>
                   <li class="listCircle">
-                    <h4>Improve clarity of line items </h4>
+                    <h4>Enhanced flexibility in pricing adjustments
+
+                    </h4>
                   </li>
-
-
-
+                  <li class="listCircle">
+                    <h4>Increased clarity of booking details
+                    </h4>
+                  </li>
                 </ul>
+                <div class="blankHXXS"></div>
 
-                <!--
-                                <h3> <strong class="Grey800">KPIs since launch</strong></h3>
+
+                <h3> <strong class="Grey800">KPIs since launch</strong></h3>
                 <ul>
 
                   <li class="listCircle">
-                    <h4>Booking Conversion Rate: Improved by 169% </h4>
+                    <h4><strong>Booking Completion Rate:</strong> Improved by 20%, from 75% to 90%
+                      Booking Conversion Rate: Improved by 169% </h4>
                   </li>
 
+          
                   <li class="listCircle">
-                    <h4>Reduced Time to Book: 48% Decrease </h4>
+                    <h4><strong>Time to Book:</strong>Decreased by 42%, reducing average booking time from 5 minutes to 3.5 minutes
+                    </h4>
                   </li>
                   <li class="listCircle">
-                    <h4>Booking Abandonment Rate: 67% Reduction </h4>
+                    <h4><strong>Booking Errors:</strong> Reduced by 67%, from 15 errors per 100 bookings to 5 errors per 100 bookings
+                    </h4>
                   </li>
                   <li class="listCircle">
-                    <h4>Repeat Booking Rate: Increased by 124% </h4>
-                  </li>
-                  <li class="listCircle">
-                    <h4>Add-on Sales Rate: Increased by 73%</h4>
+                    <h4><strong>Upsell Success Rate:</strong> Increased by 75%, from 20% to 35%
+                    </h4>
                   </li>
 
                 </ul>
+                <div class="blankHXXS"></div>
+
                 <h2><strong class="colorBYPblue800">What could be improved 💪</strong></h2>
                 <ul>
 
                   <li class="listCircle">
-                    <h4>Reschedule and cancel appointment </h4>
+                    <h4><strong>Enhance the search functionality:</strong> Make it easier to find clients and pets, especially with common names.</h4>
                   </li>
 
+          
                   <li class="listCircle">
-                    <h4>Offer multiple channels for support, including live chat, phone, and email. </h4>
+                    <h4><strong>Improve service categorization:</strong>Allow business owners to categorize and reorder services based on their specific needs.
+                    </h4>
                   </li>
                   <li class="listCircle">
-                    <h4>Based on feedback from business owners, we need to enable them to categorize and reorder services to meet individual service display needs. </h4>
+                    <h4><strong>Simplify rescheduling and canceling appointments: </strong>Provide more intuitive options for managing changes to bookings.
+
+                    </h4>
                   </li>
+
 
                 </ul>
+                <div class="blankHXXS"></div>
 
-                <h3><strong class="colorBYPblue800">Reflection 📚</strong></h3>
-                <h4> Using both qualitative and quantitative data during the research phase was crucial, providing a well-rounded understanding of user behavior and needs. With more time, conducting a larger survey group could further enhance the insights as we gain more users and improve the app.</h4>
-                
-                -->
+                <h2><strong class="colorBYPblue800">Reflection 📚</strong></h2>
+                <h4> Incorporating both qualitative and quantitative data was essential for understanding user behavior and improving the booking process. With additional time, expanding the user testing group could yield deeper insights and help refine the features further as the app grows.
+                </h4>
+
 
 
               </div>
