--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -224,7 +224,7 @@
 
 
         <div class="blankHS"></div>
-        <hr class="wrapperL">
+        <hr class="wrapperS">
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -281,7 +281,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -338,7 +338,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -437,7 +437,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -718,12 +718,12 @@
         </div>
         <div class="blankHTiny"></div>
 
-        <div class="Grid Grid--gutters Grid--cols-3">
+        <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_understand.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
                 <h3>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
                 </h3>
@@ -748,7 +748,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_facilitate.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
                 <h3>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
                 </h3>
@@ -761,7 +761,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapper colorBlack">
+      <hr class="wrapperL colorBlack">
       <div class="blankHXS"></div>
 
 
