--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -761,7 +761,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapperL colorBlack">
+      <hr class="wrapperS colorBlack">
       <div class="blankHXS"></div>
 
 
