--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -1269,8 +1269,8 @@
   <%- include(`${templatePath}/shared/comp_backTop`) %>
 
   <%- include(`${templatePath}/shared/block_nav_footer`, { 
-    iconHoverColor: 'hoverWhite',
-    footerBackgroundColor:'colorBgVW'
+    iconHoverColor: 'hoverGrey300',
+    footerBackgroundColor:'colorBgWhieTrans'
   }) %>
 
   <!-- Shared across the platform -->
