--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -117,6 +117,8 @@
   <!-- Content -->
   <section id="projects">
     <div class="colorBgWhie pattern2">
+      <div class="blankHXS"></div>
+
       <!-- Arrow -->
       <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {
       message: 'Projects' ,
@@ -143,7 +145,7 @@
 
               <div class="paddingXL borderRadiusL gradient_background1">
                 <a href="/byp_b2b_booking">
-                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience"></a>
+                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience"></a>
               </div>
             </div>
 
@@ -776,9 +778,10 @@
 
     </div>
     <!-- Arrow -->
+    <div class="blankHXS"></div>
+
     <%- include('shared/comp_textualElements_arrow', {message: 'My Journey' }) %>
     <!-- Arrow -->
-    <div class="blankHXS"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutters">
