--- a/html/main.css
+++ b/html/main.css
@@ -250,8 +250,9 @@ a:link.textProject {
 }
 
 .active a {
-    font-weight: 300;
+    font-weight: 400;
     color: var(--Grey900);
+    transition: font-weight 0.3s ease; /* Add transition for font-weight */
 }
 
 .active.activeNav a {
@@ -1846,6 +1847,7 @@ li .newPanelV3 {
 
 /* =========== new sidebar =========== */
 
+
 .new_side_bar {
     position: sticky;
     width: max-content;
@@ -1857,12 +1859,15 @@ li .newPanelV3 {
     left: 100%;
     z-index: 98;
     text-align: center;
+    font-weight: 300; /* Default font-weight for non-active items */
+    font-size: 22px;
+    transition: font-weight 0.3s ease, text-shadow 0.3s ease; /* Smooth transition */
+
 }
 
 .new_side_bar li {
     box-sizing: border-box;
     width: 100%;
-    font-size: 32px;
     padding: var(--paddingM);
     margin: 18px 0;
     border-radius: 64px;
@@ -1870,11 +1875,13 @@ li .newPanelV3 {
 
 .new_side_bar li.active {
     outline: var(--Grey900) 0.04em solid;
+
 }
 
 .new_side_bar li.active:hover {
     outline: var(--BYP2024-Blue800) 0.04em solid;
 }
+
 
 /* =========== new sidebar =========== */
 
